--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
+  "name": "your-app-name",
+  "version": "1.0.0",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "handlebars": "^4.7.8",
     "handlebars-cli": "^0.1.2",
     "hbs": "^4.2.0",
     "i": "^0.3.7",
     "mongoose": "^8.4.0",
     "nodemon": "^3.1.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
