--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "handlebars": "^4.7.8",
     "handlebars-cli": "^0.1.2",
